fix log floating in middle of screen on ios safari

--- a/_sass/_mailchimp.scss
+++ b/_sass/_mailchimp.scss
@@ -32,11 +32,8 @@
   display: none;
 }
 
-#mc_embed_signup {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
-  margin-top: 25px;
+.mc-div {
+  margin: 25px 0 0 0;
 }
 
 @media all and (max-device-width: 720px) {
